# Interface

./: CMakeLists.txt  README.md
src/: EntityManager.hpp  main.cpp
src/object/: IMonitoredEntity.hpp
src/object/Drone/: ADrone.cpp  ADrone.hpp  Drone.hpp
src/object/WeatherStation/: WeatherStation.cpp  WeatherStation.hpp
ui/: main.qml
